<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_item_list"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/item_message_title"
        />

    <EditText
        android:id="@+id/item_message_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"

        android:textColor="@color/white"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_textView"
        app:layout_constraintBottom_toTopOf="@+id/message_textView"
        android:inputType="text"/>

    <TextView
        android:id="@+id/message_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_message"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_message_title"
        app:layout_constraintBottom_toTopOf="@+id/item_message"
        />

    <EditText
        android:id="@+id/item_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="3"

        android:textColor="@color/white"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_textView"
        android:inputType="text" />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/add_image"

        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@+id/item_message"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_margin="10dp"
        android:src="@color/holo_green_dark"

        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@+id/item_message"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/message_description" />

    <Button
        android:id="@+id/done_button"
        android:text="@string/done"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="10dp"

        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/revert_button" />

    <Button
        android:id="@+id/revert_button"
        android:text="@string/revert"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginEnd="10dp"

        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/done_button" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />

</android.support.constraint.ConstraintLayout>